--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,25 @@
 .bg-light {
   background-color: rgba(255, 144, 14, 0.1);
 }
+
+.primary-btn {
+  background-color: #ff900e;
+  color: white;
+  padding: 20px 25px;
+  font-size: 1.25rem;
+  font-weight: 600;
+  border-radius: 8px;
+  border: none;
+}
+
+main {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+main > section {
+    margin-top: 130px;
+}
 /* header-style */
 
 /* navbar related style */
@@ -32,10 +51,6 @@
   font-weight: 700;
   font-size: 2.8rem;
 }
-
-.nav-links {
-}
-
 .nav-item {
   list-style: none;
   margin-right: 30px;
@@ -52,3 +67,50 @@
   max-width: 1440px;
   margin: 0 auto;
 }
+
+/* banner related styles */
+.banner-content {
+  max-width: 850px;
+  margin: 50px auto;
+  text-align: center;
+}
+.banner-title {
+  font-weight: 700;
+  font-size: 4rem;
+}
+
+.banner-img {
+  width: 100%;
+}
+
+/* team and feature related style */
+.teams {
+    align-items: center;
+}
+.team-img-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+
+.our-features {
+    margin-left: 130px;
+    max-width: 530px;
+
+}
+.feature-title {
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+#quick-list {
+    font-weight: 500;
+}
+
+@media screen and (max-width: 576px) {
+  .navbar,
+  .nav-link {
+    flex-direction: column;
+  }
+}
+
+
