--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,9 @@
 .display-flex {
   display: flex;
 }
-
+.text-primary {
+  color: #ff900e;
+}
 .text-gray {
   color: #424242;
 }
@@ -38,6 +40,11 @@ main {
 
 main > section {
     margin-top: 130px;
+}
+
+.section-title {
+    font-size: 2.8rem;
+    font-weight: 700;
 }
 /* header-style */
 
@@ -98,19 +105,32 @@ main > section {
     max-width: 530px;
 
 }
-.feature-title {
-    font-size: 2.8rem;
-    font-weight: 700;
-}
+
+
 #quick-list {
     font-weight: 500;
 }
 
 @media screen and (max-width: 576px) {
   .navbar,
-  .nav-link {
+  .nav-link,
+  .teams {
     flex-direction: column;
+  }
+
+  .team-img-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .our-features {
+    margin-left: 20px;
   }
 }
 
-
+@media screen and (min-width: 576px) and (max-width:992px) {
+  .teams {
+    flex-direction: column;
+  }
+  .our-features {
+    margin: 50px auto;
+  }
+}
