--- a/styles/style.css
+++ b/styles/style.css
@@ -34,17 +34,17 @@
 }
 
 main {
-    max-width: 1440px;
-    margin: 0 auto;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 main > section {
-    margin-top: 130px;
+  margin-top: 130px;
 }
 
 .section-title {
-    font-size: 2.8rem;
-    font-weight: 700;
+  font-size: 2.8rem;
+  font-weight: 700;
 }
 /* header-style */
 
@@ -92,23 +92,21 @@ main > section {
 
 /* team and feature related style */
 .teams {
-    align-items: center;
+  align-items: center;
 }
 .team-img-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 24px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
 }
 
 .our-features {
-    margin-left: 130px;
-    max-width: 530px;
-
+  margin-left: 130px;
+  max-width: 530px;
 }
 
-
 #quick-list {
-    font-weight: 500;
+  font-weight: 500;
 }
 .facts-container {
   display: grid;
@@ -133,11 +131,26 @@ main > section {
   font-size: 1.25rem;
   font-weight: 600;
   margin-top: 10px;
-  }
+}
 
-  .fact-description {
-    max-width: 540px;
-  }
+.fact-description {
+  max-width: 540px;
+}
+
+.sponsor-info {
+  max-width: 540px;
+  margin: 50px auto;
+  text-align: center;
+}
+.sponsor-companies {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.sponsor-companies img {
+  filter: grayscale(100%);
+}
+
 @media screen and (max-width: 576px) {
   .navbar,
   .nav-link,
@@ -145,19 +158,38 @@ main > section {
     flex-direction: column;
   }
 
-  .team-img-container {
+  .team-img-container,
+  .facts-container,
+  .sponsor-companies {
     grid-template-columns: repeat(1, 1fr);
+  }
+
+  .facts-container {
+    justify-items: center;
+    gap: 24px;
+  }
+
+  .sponsor-companies {
+    justify-items: center;
+    gap: 50px;
   }
   .our-features {
     margin-left: 20px;
   }
 }
 
-@media screen and (min-width: 576px) and (max-width:992px) {
+@media screen and (min-width: 576px) and (max-width: 992px) {
   .teams {
     flex-direction: column;
   }
   .our-features {
     margin: 50px auto;
+  }
+
+  .sponsor-companies,
+  .facts-container {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px;
+    justify-items: center;
   }
 }
