--- a/styles/style.css
+++ b/styles/style.css
@@ -124,15 +124,27 @@ main > section {
   border-radius: 8px;
 }
 
-
 .feature-card .feature-title {
   font-weight: 600;
   font-size: 1.25rem;
   margin-top: 0px;
   margin-bottom: 0px;
 }
+#experience-badge {
+  padding: 45px 42px;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-left: -100px;
+  margin-top: -77px;
+}
+#experience-year {
+  font-size: 4rem;
+  font-weight: 700;
+}
 
-
+.featured-architect img {
+  width: 100%;
+}
 
 .facts-container {
   display: grid;
@@ -180,7 +192,8 @@ main > section {
 @media screen and (max-width: 576px) {
   .navbar,
   .nav-link,
-  .teams {
+  .teams,
+  .features {
     flex-direction: column;
   }
 
@@ -202,10 +215,16 @@ main > section {
   .our-features {
     margin-left: 20px;
   }
+
+  #experience-badge {
+    margin-top: 20px;
+    margin-left: 20px;
+  }
 }
 
 @media screen and (min-width: 576px) and (max-width: 992px) {
-  .teams {
+  .teams,
+  .features {
     flex-direction: column;
   }
   .our-features {
@@ -217,5 +236,9 @@ main > section {
     grid-template-columns: repeat(2, 1fr);
     gap: 50px;
     justify-items: center;
+  }
+  #experience-badge {
+    margin-top: 20px;
+    margin-left: 20px;
   }
 }
